[project]
name = "ComfyUI-ImageViewerBEPIC"
description = "The bEpic image viewer by sebastianzilius is a professional floating image viewer for ComfyUI - multi-tab, history snapshots, side-by-side comparison, playback timeline, exposure/channel controls, and a live parameter panel."
authors = [ "Sebastian Zilius"]  

version = "0.2.0"
license = "Noncommercial" 
classifiers = [
    "Operating System :: Microsoft :: Windows"
]

dependencies = ["psutil", "nvidia-ml-py"]

[project.urls]
Repository = "https://github.com/szprivate/ComfyUI-ImageViewer"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/szprivate/ComfyUI-ImageViewer/docs"

[tool.comfy]
PublisherId = "sebastianzilius"
DisplayName = "ComfyUI-ImageViewer"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility